[package]
name = "openbook_swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "openbook_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = { version = "0.26.0", features = ["dex"] }
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
safe-transmute = "0.11.0"
